# prime-programs-cached-copy

./: README.md  covering.c  mtsieve_2.3.3.7z  sr1sieve_1.4.6.7z  sr2sieve_2.0.0.7z  srbsieve.rar  srsieve_1.1.0.7z  srsieve_1.1.4.7z
CHG/: _CHG.GP.txt
CRUS_pack/LLR_3.8.1/: Readme.txt
CRUS_pack/PFGW_WIN_3.5/: LICENSE.pfgw  abcfileformats.txt  release_notes.txt
CRUS_pack/PFGW_WIN_3.6/: pfgwdoc.txt  release_notes.txt  scriptfileformat.txt  scriptify.0.95.pl
CRUS_pack/scripts/: new-bases-4.3.txt  new-bases-5.1.txt
CRUS_pack/sr1sieve_1.4.1/: README.txt  sr1sieve-x86-linux  sr1sieve-x86_64-linux
CRUS_pack/sr2sieve_1.8.11/: README-threads.txt  sr2sieve-x86-linux  sr2sieve-x86_64-linux
CRUS_pack/srsieve_0.6.17/: BUG64.txt  WARNING.txt  srfile-x86-linux  srfile-x86_64-linux  srsieve-x86-linux  srsieve-x86_64-linux
KP/: KonPom.gp.txt
Primo309/: primo.exe.manifest  primo.html  primo.ini  primo.xd1  primo.xd2  primo.xd3  primo.xd4  primo.xd5  primo.xp1  primo.xp2  primo.xp3  primo.xp4
allnash/: mnash.c  nash.c
cm/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
cm/data/: Makefile.am  Makefile.in
cm/data/af/: Makefile.am  Makefile.in
cm/data/df/: Makefile.am  Makefile.in
cm/data/mf/: Makefile.am  Makefile.in
cm/doc/: Makefile.am  Makefile.in  cm.info  cm.texi  version.texi
cm/lib/: Makefile.am  Makefile.in  class.c  classgroup.c  cm-arith.h  cm-impl.h  cm.h  curve.c  ecpp.c  file.c  flint.c  get_version.c  jmodp.c  modclass.c  modpol.c  modular.c  mpi.c  mpzx.c  nt.c  param.c  pari.c  qdev.c  timer.c
cm/m4/: lx_find_mpi.m4
cm/src/: Makefile.am  Makefile.in  classpol.c  cm.c  ecpp-mpi.c  ecpp.c  params.c  params.h
cm/tests/: Makefile.am  Makefile.in  tcm.c  tecpp.c  ttwist.c
coveringsets/: bigcovering.c  riesel.txt  sierpinski.txt
covset/: covset.cpp  covset.ini
covset-dynam/: covset.ini
ecm704dev-svn2990-linux64/: ecm
ecm704dev-svn2990-win64/: AUTHORS.GMPECM  AUTHORS.MPIR  ChangeLog.txt  INSTALL-ecm.txt  NEWS.txt  README.GMPECM  README.MPIR  TODO.txt
gw_utility/: gw_utility.c  gw_utility.h.txt
llr403linux64/: Readme.txt
llrcuda387linux64/: Readme.txt  llrCUDA
mtsieve_2.3.3/: CHANGES.txt  FUTURE.txt  README.txt  README_MTSieve.txt
mtsieve_2.4.1/: CHANGES.txt  FUTURE.txt  README_MTSieve.txt
mtsieve_2.4.8/: CHANGES.txt  README.md
newpgenlinux/: newpgen
pfgw_win_4.0.3/: README.pfgw  abcfileformats.txt  decimalfileformat.txt  newpgenformats.txt  pfgw.ini  pfgwdoc.txt  release_notes.txt  scriptfileformat.txt  scriptify.0.8.htm
prime95/: license.txt  undoc.txt  whatsnew.txt
primo-433-lx64/: changes.txt  primo  primo.d01  primo.d02  primo.d03  primo.d04  primo.d05  primo.d06  primo.d07  primo.d08  primo.d09  primo.d10  primo.d11  primo.d12  primo.d13  primo.d14  primo.d15  primo.d16  primo.d17  primo.d18  primo.d19  primo.d20  primo.d21  primo.d22  primo.d23  primo.d24  primo.d25  primo.d26  primo.d27  primo.d28  primo.d29  primo.html  primo.x01  primo.x02  primo.x03  primo.x04  primo.x05  primo.x06  primo.x07  primo.x08  (+19 more)
snewpgenlinux/: snewpgen
sr1sieve/: README-threads.txt  sr1sieve-help.txt
sr1sieve_1.4.6/: CHANGES  INSTALL  Makefile  README  README-threads  README.txt.in  arithmetic.c  arithmetic.h  asm-i386-gcc.h  bitmap.c  bsgs.c  choose.c  clock.c  cpu.c  events.c  expmod-ppc64.S  factors.c  files.c  hash-i386.S  hashtable.c  legendre.c  misc-i386.S  misc-x86-64.S  mulmod-i386.S  mulmod-ppc64.S  mulmod-sse2.S  mulmod-x86-64.S  mulmod-x87-64.S  powmod-i386.S  powmod-sse2.S  powmod-x86-64.S  powmod-x87-64.S  primes.c  priority.c  sequences.c  sr1sieve.c  sr1sieve.h  srtest.c  subseq.c  threads.c  (+2 more)
sr2sieve/: README.txt  sr2sieve-help.txt
sr2sieve_2.0.0/: CHANGES  Makefile  arithmetic.c  arithmetic.h  bitmap.c  bitmap.h  bsgs.c  choose.c  clock.c  config.h  cpu.c  events.c  factors.c  files.c  hashtable.c  hashtable.h  legendre.c  lookup-i386.S  lookup-sse2.S  lookup-x87_64.S  memset_fast32.h  misc-x86-64.S  mulmod-ppc64.S  mulmod-x87-64.S  powmod-i386.S  powmod-sse2.S  powmod-x86-64.S  powmod-x87-64.S  primes.c  priority.c  sequences.c  sobistrator.c  sr2sieve.c  sr2sieve.h  srtest.c  subseq.c  threads.c  util.c  version.h
srbsieve-other-programs/: fbncsieve-help.txt  srsieve2-help.txt
srbsieve_1.8.1/: primegen.h  primegen_skip.cpp  srbsieve.cpp  srbsieve.ini
srbsieve_1.8.2/: primegen.cpp  srbsieve.cpp  srbverify.cpp
srfile/: srfile-help.txt
srsieve/: README.txt  srsieve-help.txt
srsieve2/: srsieve2-help.txt
srsieve_1.1.0/: CHANGES  Makefile  algebraic.c  config.h  files.c  filter.c  srsieve.c  srsieve.h  util.c  version.h
srsieve_1.1.4/: CHANGES  Makefile  algebraic.c  asm-x86-64-gcc.h  expmod-ppc64.S  files.c  powmod-i386.S  powmod-k8.S  srfile.c  srsieve.c  srsieve.h  subseq.c  version.h
